--- a/Submission.ipynb
+++ b/Submission.ipynb
@@ -71,7 +71,7 @@
     "id": "h1o69JH3Eqqn"
    },
    "source": [
-    "Provide your GitHub Link here."
+    "https://github.com/Ruhetarannum/Store-analysis"
    ]
   },
   {
@@ -97,90 +97,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "mDgbUHAGgjLW"
-   },
-   "source": [
-    "# **General Guidelines** : -  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ZrxVaUj-hHfC"
-   },
-   "source": [
-    "1.   Well-structured, formatted, and commented code is required.\n",
-    "2.   Exception Handling, Production Grade Code & Deployment Ready Code will be a plus. Those students will be awarded some additional credits.\n",
-    "     \n",
-    "     The additional credits will have advantages over other students during Star Student selection.\n",
-    "       \n",
-    "             [ Note: - Deployment Ready Code is defined as, the whole .ipynb notebook should be executable in one go\n",
-    "                       without a single error logged. ]\n",
-    "\n",
-    "3.   Each and every logic should have proper comments.\n",
-    "4. You may add as many number of charts you want. Make Sure for each and every chart the following format should be answered.\n",
-    "        \n",
-    "\n",
-    "```\n",
-    "# Chart visualization code\n",
-    "```\n",
-    "            \n",
-    "\n",
-    "*   Why did you pick the specific chart?\n",
-    "*   What is/are the insight(s) found from the chart?\n",
-    "* Will the gained insights help creating a positive business impact?\n",
-    "Are there any insights that lead to negative growth? Justify with specific reason.\n",
-    "\n",
-    "5. You have to create at least 15 logical & meaningful charts having important insights.\n",
-    "\n",
-    "\n",
-    "[ Hints : - Do the Vizualization in  a structured way while following \"UBM\" Rule.\n",
-    "\n",
-    "U - Univariate Analysis,\n",
-    "\n",
-    "B - Bivariate Analysis (Numerical - Categorical, Numerical - Numerical, Categorical - Categorical)\n",
-    "\n",
-    "M - Multivariate Analysis\n",
-    " ]\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "6. You may add more ml algorithms for model creation. Make sure for each and every algorithm, the following format should be answered.\n",
-    "\n",
-    "\n",
-    "*   Explain the ML Model used and it's performance using Evaluation metric Score Chart.\n",
-    "\n",
-    "\n",
-    "*   Cross- Validation & Hyperparameter Tuning\n",
-    "\n",
-    "*   Have you seen any improvement? Note down the improvement with updates Evaluation metric Score Chart.\n",
-    "\n",
-    "*   Explain each evaluation metric's indication towards business and the business impact pf the ML model used.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "HhfV-JJviCcP"
    },
    "source": [
@@ -198,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {
     "id": "M8Vqi-pPk-HR"
    },
@@ -233,14 +149,9 @@
     "import string\n",
     "import nltk\n",
     "\n",
-    "# from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "# from sklearn.cluster import KMeans\n",
     "from sklearn.ensemble import IsolationForest, RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, silhouette_score\n",
     "from sklearn.impute import SimpleImputer\n",
-    "# from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
-    "# from sklearn.preprocessing import FunctionTransformer\n",
-    "# from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.feature_selection import VarianceThreshold, RFE\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
@@ -265,10 +176,6 @@
     "from scipy.stats import ttest_ind\n",
     "from scipy.stats import pearsonr\n",
     "from scipy.stats import spearmanr\n",
-    "\n",
-    "# import datetime\n",
-    "# import warnings\n",
-    "# from tqdm import tqdm\n",
     "\n",
     "# Configure plotting\n",
     "plt.rcParams['figure.figsize'] = (10, 6)\n",
